--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="E-ComBack-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/E-ComBack/E-ComBack">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="E-ComFront"/>
         <property name="java-output-path" value="/E-ComFront/target/classes"/>
     </wb-module>
